--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" ref="CSS/bootstrap.min.css"/>
+    <link rel="stylesheet" href="CSS/bootstrap.min.css"/>
     <link rel="stylesheet" href="CSS/styles.css">
     <title>JeniferBaldonado</title>
 </head>
@@ -12,44 +12,57 @@
     <script src="js/bootstrap.bundle.min.js"></script>
 <!--********************HEADER-NAV Section*******************-->
     <header class="header">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">jeniferbaldonado</a>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #001F3D;">
+            <div class="container">
+              <a class="navbar-brand" href="#home" style="color:#DAF0F3;"><strong>jeniferbaldonado</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#services">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonials</a>
+                    <a class="nav-link" href="#testimonials">Testimonials</a>
                   </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
                 </ul>
               </div>
             </div>
           </nav>
     </header>
 <!--********************HERO Section*******************-->
-        <section class="hero" role="region" aria-labelledby="hero_title">
-            <div class="hero_content">
-                        <h1 class="hero_title" id="hero_title"><strong>Hi! I'm Jenifer</strong></h1>
-                        <h4 class="hero_subtitle">I am a full-stack web developer. 
-                            I work with designers, small businesses, and agencies in realizing their ideas. </h4>
-                            <!--insert a button or img element here for "Get Started"-->
+<main>
+    <section id="home">
+        <div class="home">
+        <div class="px-4 py-5 my-5 text-center bg-dark">
+        <img class="d-block mx-auto mb-4 hero_logo" src="images/AvatarMaker2.png" alt="My picture">
+        <h1 class="display-5 fw-bold">Hi! I'm Jenifer</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">KNOW MORE</button>
 
             </div>
-        </section>
+        </div>
+        </div>
+    </div>
+    </section>
+
+
 <!--********************PORTFOLIO Section*******************-->  
         <section id="portfolio" class="portfolio" role="region" aria-labelledby="portfolio_title">
             <div class="portfolio_div">
