--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
 <!--********************HEADER-NAV Section*******************-->
     <header class="header">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #001F3D;">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <div class="container">
               <a class="navbar-brand" href="#home" style="color:#DAF0F3;"><strong>jeniferbaldonado</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,28 +48,74 @@
 <main>
     <section id="home">
         <div class="home">
-        <div class="px-4 py-5 my-5 text-center bg-dark">
-        <img class="d-block mx-auto mb-4 hero_logo" src="images/AvatarMaker2.png" alt="My picture">
-        <h1 class="display-5 fw-bold">Hi! I'm Jenifer</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">KNOW MORE</button>
+            <div class="px-4 py-5 my-5 text-center hero-section">
+            <img class="d-block mx-auto mb-4 hero_logo" src="images/AvatarMaker2.png" alt="My picture">
+            <h1 class="display-5 fw-bold">Hi! I'm Jenifer</h1>
+            <div class="col-lg-6 mx-auto py-5">
+                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">KNOW MORE</button>
 
+                </div>
             </div>
-        </div>
         </div>
     </div>
     </section>
-
+    <!--****************Transition Image*****************-->
+    <div class="trans-image">
+        <img src=""/>
+    </div>
+<!--********************Services Section*******************-->
+    <section id="services">
+        <div>
+            <h2>SERVICES</h2>
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide px-5" data-bs-ride="false">
+            <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/2.png" class="d-block w-100" alt="service 1 ">
+                <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/2_1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/3.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>  
 
 <!--********************PORTFOLIO Section*******************-->  
-        <section id="portfolio" class="portfolio" role="region" aria-labelledby="portfolio_title">
+        <section id="portfolio" class="portfolio text-center" role="region" aria-labelledby="portfolio_title">
             <div class="portfolio_div">
                 <h2 id="portfolio_title">Portfolio</h2>
-            <img src="Icons/Arrow.png" class="leftArrow">
-            <img src="Icons/Arrow.png" class="rightArrow">
             </div>
+            
         </section>
 
         <section id="testimonials" class="testimonials" role="region" aria-labelledby="testimonials_title">
