Add background color to body element

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
              <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-item">
-                    <a href="Tribute Page/index.html" target="_blank">
+                    <a href="https://jenbaldonado.github.io/tribute-page-jose-rizal/" target="_blank">
                         <img src="images/portfolio-img.png" alt="" class="portfolio-img">
                         <div class="portfolio-overlay">
                          <div>
@@ -172,7 +172,7 @@
              </div>
              <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-item">
-                    <a href="CSS Flexbox-PhotoGallery/index.html" >
+                    <a href="https://jenbaldonado.github.io/straw-hat-photo-gallery/" >
                       <img src="images/portfolio-img.png" alt="" class="portfolio-img">
                       <div class="portfolio-overlay">
                          <div>
