Updated the button sizes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--********************HEADER-NAV Section*******************-->
 
   <header class="header">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="menu">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="#home" style="color: #daf0f3"><strong>jeniferbaldonado</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
