--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JeniferBaldonado</title>
 
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/bootstrap.min.css" />
   <link rel="stylesheet" href="CSS/styles.css" />
+
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -37,9 +38,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#skills">skills</a>
-            </li>
+            
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
@@ -52,11 +51,11 @@
     </nav>
   </header>
   <!--********************HERO Section*******************-->
-  <main>
+
     <main>
       <section id="home" role="region" aria-labelledby="home">
         <div class="px-4 py-5 my-5 text-center">
-          <img src="images/logo-icon.png" class="d-block mx-auto mb-4 img-fluid hero-logo" alt=" my logo" />
+          <img src="images/logo-icon.png" class="d-block mx-auto mb-4 img-fluid hero-logo" data-aos="zoom-out" alt=" my logo" />
           <div class="text-container">
             <h1 class="display-5 mx-auto fw-bold home-title">This is my <span>PORTFOLIO</span> site.</h1>
           </div>
@@ -66,8 +65,6 @@
         </div>
       </section>
 
-      <div class="section-break"></div>
-
       <!--********************About Section*******************-->
       <section id="about" role="region" aria-labelledby="about">
         <div class="col-12 section-intro">
@@ -75,10 +72,10 @@
           <div class="hline"></div>
         </div>
         <div class="about-container">
-          <div class="about-img-container">
+          <div class="about-img-container" data-aos="fade-right"  data-aos-delay="50" data-aos-offset="300" data-aos-easings="ease-in-sine">
             <img src="images/filipiniana.png" alt="A picture of me in filipiniana costume." class="filipiniana-img" />
           </div>
-          <div class="about-content-container">
+          <div class="about-content-container" data-aos="fade-left" data-aos-delay="50" data-aos-offset="300" data-aos-easings="ease-in-sine">
             <div class="about-contents">
               <h3><span class="about-description-title">Hi! I'm Jenifer Baldonado. I'm an aspiring web developer.</span>
               </h3>
@@ -105,60 +102,6 @@
 
       </section>
 
-      <div class="section-break"></div>
-
-      <!--********************skills Section*******************-->
-      <section id="skills" role="region" aria-labelledby="skills">
-        <div class="col-12 section-intro">
-          <h2>SKILLS</h2>
-          <div class="hline"></div>
-        </div>
-        <div id="carouselExampleCaptions" class="carousel slide px-5" data-bs-ride="false">
-          <div class="carousel-indicators d-none d-sm-flex">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/html.png" class="d-block w-100" alt="html logo">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>HTML</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/CSS.png" class="d-block w-100" alt="css logo">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>CSS</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/js.png" class="d-block w-100" alt="js logo">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>JAVASCRIPT</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </section>
-
-      <div class="section-break"></div>
 
       <!--********************PORTFOLIO Section*******************-->
       <section id="portfolio" class="row g-0 py-0" role="region" aria-labelledby="portfolio">
@@ -168,7 +111,7 @@
         </div>
         <div class="portfolio-container">
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/DogPhotoApp/" target="_blank">
                 <img src="images/golden-retriever-puppy.jpg" alt="A photo of a golden retriever"
                   class="portfolio-img" />
@@ -184,7 +127,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/tribute-page-jose-rizal/" target="_blank">
                 <img src="images/20220619-joserizal.jpg" alt="Collection of painting of Jose Rizal"
                   class="portfolio-img" />
@@ -200,7 +143,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/straw-hat-photo-gallery/" target="_blank">
                 <img src="images/One-Piece-Character-Guide-750x375.jpg" alt="poster of one piece"
                   class="portfolio-img" />
@@ -216,7 +159,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/LandingPage-TeaShop/" target="_blank">
                 <img src="images/pexels-nikolay-osmachko-230483.jpg" alt="photo by nikolay osmachko"
                   class="portfolio-img" />
@@ -232,7 +175,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/quiz-site/" target="_blank">
                 <img src="images/quiz-g6c8cb01b4_1280.png" alt="photo of quiz word" class="portfolio-img" />
                 <div class="portfolio-overlay">
@@ -247,7 +190,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
+            <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
               <a href="https://jenbaldonado.github.io/html-form-excercise/" target="_blank">
                 <img src="images/how-to-write-conclusion-for-essay.jpg" alt="" class="portfolio-img" />
                 <div class="portfolio-overlay">
@@ -264,16 +207,14 @@
         </div>
       </section>
 
-      <div class="section-break"></div>
-
       <!--********************Contact Section*******************-->
       <section id="contact" class="contact" role="region" aria-labelledby="contact">
         <div>
-          <div class="col-12 section-intro text-center contact-div">
+          <div class="col-12 section-intro text-center">
             <h2>Get in touch</h2>
             <div class="hline"></div>
 
-            <form action="#" class="">
+            <form action="#" data-aos="zoom-in">
               <div class="mb-3 mx-3">
                 <label for="email" class="form-label">Email address:</label>
                 <input type="email" class="form-control form-control-lg form-control-xs email" id="email" name="email"
@@ -287,7 +228,6 @@
               <button type="submit">Send</button>
             </form>
       </section>
-      <div class="section-break"></div>
     </main>
 
     <footer>
@@ -297,7 +237,11 @@
     </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+   
 </body>
 
 </html>
