--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             programs I've seen and used.I'm currently studying how to become a web developer to realize this dream
             of mine.
 
-            <a href="about.html">see more...</a>
+            <a href="about.html">learn more...</a>
           </p>
           <div class="socmed-div">
             <a href="https://web.facebook.com/jenzkie0805" target="_blank" class="icon-link">
