--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <h2>ABOUT ME</h2>
                 <div class="hline"></div>
             </div>
-            <div class="about-container my-5" data-aos="fade-right" data-aos-delay="50" data-aos-offset="300"
+            <div class="about-container my-5" data-aos="fade-right" data-aos-offset="300"
                 data-aos-easings="ease-in-sine">
                 <div class="about-img-container">
                     <div class="img-one">
@@ -42,7 +42,7 @@
                         <img src="images/teach1.jpg" alt="A picture of me in teaching." class="page-img img-fluid" />
                     </div>
                 </div>
-                <div class="about-content-container my-auto" data-aos="fade-left" data-aos-delay="50"
+                <div class="about-content-container my-auto" data-aos="fade-left"
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         I am a Licensed Professional Teacher with a degree in Bachelor in Elementary Education.
@@ -53,13 +53,13 @@
             <div class="space line"></div>
 
             <div class="about-container my-5">
-                <div class="about-content-container my-auto" data-aos="fade-left" data-aos-delay="50"
+                <div class="about-content-container my-auto" data-aos="fade-left"
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         During the pandemic, I have found a new hobby which is 3D modelling using
                         the open-source application Blender. Some of my works are showcased below. </h3>
                 </div>
-                <div class="about-img-container" data-aos="fade-right" data-aos-delay="50" data-aos-offset="300"
+                <div class="about-img-container" data-aos="fade-right" data-aos-offset="300"
                     data-aos-easings="ease-in-sine">
                     <div class="img-three">
                         <img src="images/blender_community_badge_white.jpg" alt="A picture of my pupils."
