--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         At the present, I have the good fortune to have discovered a platform that will help me launch
-                        the profession I've always desired. This aspiration of mine is gradually becoming a reality
+                        the career I've always desired. This aspiration of mine is gradually becoming a reality
                         thanks to KodeGo. </h3>
                 </div>
             </div>
