--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
-    <header class="about-page-header">
+    <header class="about-page-header fixed-top">
         <div class="about-page-header-title">
             <a class="about-header-text nav-link" href="index.html"><strong>Jenifer Baldonado</strong></a>
         </div>
