--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="images/logo-icon.png" class="d-block mx-auto mb-4 img-fluid hero-logo" data-aos="zoom-out"
           alt=" my logo" />
         <div class="text-container">
-          <h1 class="display-5 mx-auto fw-bold home-title">This is my <span>PORTFOLIO</span> site.</h1>
+          <h1 class="mx-auto fw-bold home-title">This is my <span>PORTFOLIO</span> site.</h1>
         </div>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-5">
           <a href="#about" class="getStarted-btn">GET STARTED</a>
