--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="hline"></div>
       </div>
       <div class="portfolio-container">
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/DogPhotoApp/" target="_blank">
               <img src="images/golden-retriever-puppy.jpg" alt="A photo of a golden retriever" class="portfolio-img" />
@@ -130,7 +130,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/tribute-page-jose-rizal/" target="_blank">
               <img src="images/20220619-joserizal.jpg" alt="Collection of painting of Jose Rizal"
@@ -146,7 +146,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/straw-hat-photo-gallery/" target="_blank">
               <img src="images/One-Piece-Character-Guide-750x375.jpg" alt="poster of one piece" class="portfolio-img" />
@@ -161,7 +161,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/LandingPage-TeaShop/" target="_blank">
               <img src="images/pexels-nikolay-osmachko-230483.jpg" alt="photo by nikolay osmachko"
@@ -177,7 +177,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/quiz-site/" target="_blank">
               <img src="images/quiz-g6c8cb01b4_1280.png" alt="photo of quiz word" class="portfolio-img" />
@@ -192,7 +192,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <a href="https://jenbaldonado.github.io/html-form-excercise/" target="_blank">
               <img src="images/how-to-write-conclusion-for-essay.jpg" alt="" class="portfolio-img" />
