--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="CSS/styles.css" />
 
@@ -60,7 +60,7 @@
         <img src="images/logo-icon.png" class="d-block mx-auto mb-4 img-fluid hero-logo" data-aos="zoom-out"
           alt=" my logo" />
         <div class="text-container">
-          <h1 class="mx-auto fw-bold home-title">This is my <span>PORTFOLIO</span> site.</h1>
+          <h1 class="display-5 mx-auto fw-bold home-title">This is my <span>PORTFOLIO</span> site.</h1>
         </div>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-5">
           <a href="#about" class="getStarted-btn">GET STARTED</a>
@@ -90,7 +90,7 @@
             programs I've seen and used.I'm currently studying how to become a web developer to realize this dream
             of mine.
 
-            <a href="about.html">learn more...</a>
+            <a href="about.html">see more...</a>
           </p>
           <div class="socmed-div">
             <a href="https://web.facebook.com/jenzkie0805" target="_blank" class="icon-link">
@@ -115,13 +115,8 @@
         <div class="hline"></div>
       </div>
       <div class="portfolio-container">
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/DogPhotoApp/" target="_blank">
               <img src="images/golden-retriever-puppy.jpg" alt="A photo of a golden retriever" class="portfolio-img" />
               <div class="portfolio-overlay">
@@ -135,13 +130,8 @@
             </a>
           </div>
         </div>
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/tribute-page-jose-rizal/" target="_blank">
               <img src="images/20220619-joserizal.jpg" alt="Collection of painting of Jose Rizal"
                 class="portfolio-img" />
@@ -156,13 +146,8 @@
             </a>
           </div>
         </div>
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/straw-hat-photo-gallery/" target="_blank">
               <img src="images/One-Piece-Character-Guide-750x375.jpg" alt="poster of one piece" class="portfolio-img" />
               <div class="portfolio-overlay">
@@ -176,13 +161,8 @@
             </a>
           </div>
         </div>
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/LandingPage-TeaShop/" target="_blank">
               <img src="images/pexels-nikolay-osmachko-230483.jpg" alt="photo by nikolay osmachko"
                 class="portfolio-img" />
@@ -197,13 +177,8 @@
             </a>
           </div>
         </div>
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/quiz-site/" target="_blank">
               <img src="images/quiz-g6c8cb01b4_1280.png" alt="photo of quiz word" class="portfolio-img" />
               <div class="portfolio-overlay">
@@ -217,13 +192,8 @@
             </a>
           </div>
         </div>
-<<<<<<< HEAD
         <div>
           <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-=======
-        <div class="col-lg-4 col-sm-6">
-          <div class="portfolio-item" data-aos="flip-down" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
->>>>>>> e05f8db28f56967df8e2fffb1ef24488fda0d6e3
             <a href="https://jenbaldonado.github.io/html-form-excercise/" target="_blank">
               <img src="images/how-to-write-conclusion-for-essay.jpg" alt="" class="portfolio-img" />
               <div class="portfolio-overlay">
