--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
-    <header class="about-page-header fixed-top">
+    <header class="about-page-header">
         <div class="about-page-header-title">
             <a class="about-header-text nav-link" href="index.html"><strong>Jenifer Baldonado</strong></a>
         </div>
@@ -32,7 +32,7 @@
                 <h2>ABOUT ME</h2>
                 <div class="hline"></div>
             </div>
-            <div class="about-container my-5" data-aos="fade-right" data-aos-offset="300"
+            <div class="about-container my-5" data-aos="fade-right" data-aos-delay="50" data-aos-offset="300"
                 data-aos-easings="ease-in-sine">
                 <div class="about-img-container">
                     <div class="img-one">
@@ -42,7 +42,7 @@
                         <img src="images/teach1.jpg" alt="A picture of me in teaching." class="page-img img-fluid" />
                     </div>
                 </div>
-                <div class="about-content-container my-auto" data-aos="fade-left"
+                <div class="about-content-container my-auto" data-aos="fade-left" data-aos-delay="50"
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         I am a Licensed Professional Teacher with a degree in Bachelor in Elementary Education.
@@ -53,13 +53,13 @@
             <div class="space line"></div>
 
             <div class="about-container my-5">
-                <div class="about-content-container my-auto" data-aos="fade-left"
+                <div class="about-content-container my-auto" data-aos="fade-left" data-aos-delay="50"
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         During the pandemic, I have found a new hobby which is 3D modelling using
                         the open-source application Blender. Some of my works are showcased below. </h3>
                 </div>
-                <div class="about-img-container" data-aos="fade-right" data-aos-offset="300"
+                <div class="about-img-container" data-aos="fade-right" data-aos-delay="50" data-aos-offset="300"
                     data-aos-easings="ease-in-sine">
                     <div class="img-three">
                         <img src="images/blender_community_badge_white.jpg" alt="A picture of my pupils."
@@ -70,16 +70,16 @@
 
             <div class="space"></div>
 
-            <div class="about-container my-5 img-gap">
-                <div class="flex-items-1" data-aos="zoom-in" data-aos-delay="50" data-aos-offset="300"
+            <div class="about-container my-5">
+                <div class="flex-items-1 pb-3" data-aos="zoom-in" data-aos-delay="50" data-aos-offset="300"
                     data-aos-easings="ease-in-sine">
                     <img src="images/throatmic1.png" alt="blender logo" class="page-img" />
                 </div>
-                <div class="flex-items-2" data-aos="zoom-in" data-aos-delay="65" data-aos-offset="300"
+                <div class="flex-items-2  pb-3" data-aos="zoom-in" data-aos-delay="65" data-aos-offset="300"
                     data-aos-easings="ease-in-sine">
                     <img src="images/boots.jpg" alt="blender logo" class="page-img" />
                 </div>
-                <div class="flex-items-3" data-aos="zoom-in" data-aos-delay="85" data-aos-offset="300"
+                <div class="flex-items-3 pb-3" data-aos="zoom-in" data-aos-delay="85" data-aos-offset="300"
                     data-aos-easings="ease-in-sine">
                     <img src="images/mouthpiece.png" alt="blender logo" class="page-img" />
                 </div>
@@ -99,7 +99,7 @@
                     data-aos-offset="300" data-aos-easings="ease-in-sine">
                     <h3 class="about-description">
                         At the present, I have the good fortune to have discovered a platform that will help me launch
-                        the career I've always desired. This aspiration of mine is gradually becoming a reality
+                        the profession I've always desired. This aspiration of mine is gradually becoming a reality
                         thanks to KodeGo. </h3>
                 </div>
             </div>
