--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       <div class="portfolio-container">
         <div>
           <div class="portfolio-item" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <a href="https://jenbaldonado.github.io/DogPhotoApp/" target="_blank">
-              <img src="images/golden-retriever-puppy.jpg" alt="A photo of a golden retriever" class="portfolio-img" />
+            <a href="https://wd16p-plix.netlify.app/" target="_blank">
+              <img src="https://prnt.sc/RlFap_8YkMMN" alt="A photo of a golden retriever" class="portfolio-img" />
               <div class="portfolio-overlay">
                 <div>
                   <h3>Dog Photo App <span class="material-symbols-outlined">
