--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
               <img src="https://prnt.sc/RlFap_8YkMMN" alt="A photo of a golden retriever" class="portfolio-img" />
               <div class="portfolio-overlay">
                 <div>
-                  <h3>Dog Photo App <span class="material-symbols-outlined">
+                  <h3>Plix Movie App<span class="material-symbols-outlined">
                       open_in_new
                     </span></h3>
-                  <h6>A simple pure HTML site</h6>
+                  <h6>A simple Movie Info App</h6>
                 </div>
               </div>
             </a>
